Fixed some spotbugs warnings in devoxx-api-cfp project.
Using Collection factory methods.